# data-diff-mover

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: .gitignore  current.csv  new_data.csv
src/: Comparer.py  Input.py  Output.py  RowState.py  exceptions.py
src/from_/: __init__.py  csv.py  ds.py
src/helpers/: compare.py  ds.py
src/helpers/ds-queries/: getDossiersAcceptes.graphql
src/input/: CsvInput.py  Input.py
src/output/: APIOutput.py  CsvOutput.py  Output.py
src/to_/: __init__.py  api.py  csv.py
tests/: test_assert_pk.py  test_compare_schema.py  test_comparison.py  test_diff_integration.py  test_persist_csv_to_csv.py
tests/ds/: test_build_dossier_url.py
