[project]
name = "data-diff-mover"
version = "0.1.0"
description = "Tool to diff data and move it."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.10",
    "mypy>=1.14.1",
    "polars>=1.20.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "types-requests>=2.32.0.20241016",
]

[tool.coverage.html]

directory = "tests/coverage-report"

[tool.coverage.run]
omit = [
    "src/from_/__init__.py"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]